--- a/src/doubleSlider.css
+++ b/src/doubleSlider.css
@@ -1,6 +1,6 @@
 .vSlider {
     height: 90%;
-    padding: 10px;
+    padding: 1%;
     /* float: left; */
     align-self: center;
     position: absolute;
@@ -8,7 +8,7 @@
 }
 .hSlider {
     width: 90%;
-    padding: 10px;
+    padding: 1%;
     /* float: bottom; */
     align-self: center;
     position: absolute;
